manifests/perses/manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: perses
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: networking
    app.kubernetes.io/instance: perses
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: perses
    app.kubernetes.io/part-of: perses
    app.kubernetes.io/version: v0.53.1
    helm.sh/chart: perses-0.22.0
  name: perses
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: perses
    app.kubernetes.io/name: perses
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: workload
    app.kubernetes.io/instance: perses
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: perses
    app.kubernetes.io/part-of: perses
    app.kubernetes.io/version: v0.53.1
    helm.sh/chart: perses-0.22.0
  name: perses
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: perses
      app.kubernetes.io/name: perses
  serviceName: perses-headless
  template:
    metadata:
      annotations:
        checksum/config: ac981c24c2edd277378d55de4f8318a96944679eb21239de27603452366827b3
      labels:
        app.kubernetes.io/instance: perses
        app.kubernetes.io/name: perses
    spec:
      containers:
      - args:
        - --config=/etc/perses/config/config.yaml
        - --web.listen-address=:8080
        - --web.hide-port=false
        - --web.telemetry-path=/metrics
        - --log.level=info
        - --log.method-trace=true
        image: docker.io/persesdev/perses:v0.53.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/v1/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 5
        name: perses
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/v1/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /etc/perses/provisioning
          name: perses-provisioning
        - mountPath: /etc/perses/config
          name: config
        - mountPath: /perses
          name: data
      securityContext:
        fsGroup: 2000
      serviceAccountName: perses
      volumes:
      - configMap:
          name: perses-provisioning
        name: perses-provisioning
      - emptyDir: {}
        name: data
      - configMap:
          defaultMode: 420
          name: perses
        name: config
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: local-ca-issuer
    kube-vip.io/loadbalancerIPs: 192.168.13.10
  name: perses
  namespace: perses
spec:
  ingressClassName: cilium
  rules:
  - host: perses.nekropolis.irminsul
    http:
      paths:
      - backend:
          service:
            name: perses
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - perses.nekropolis.irminsul
    secretName: perses-certificate
